--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,41 @@
-torch
-torchvision
-pillow
+cfgv==3.4.0
+distlib==0.3.8
+filelock==3.14.0
+fsspec==2024.6.0
+identify==2.5.36
+iniconfig==2.0.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+mpmath==1.3.0
+mypy==1.10.0
+mypy-extensions==1.0.0
+networkx==3.3
+nodeenv==1.9.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
+packaging==24.0
+pillow==10.3.0
+platformdirs==4.2.2
+pluggy==1.5.0
+pre-commit==3.7.1
+pytest==8.2.1
+PyYAML==6.0.1
+ruff==0.4.7
+setuptools==70.0.0
+sympy==1.12.1
+torch==2.3.0
+torchvision==0.18.0
+typing_extensions==4.12.1
+virtualenv==20.26.2
+wheel==0.43.0
